# graphs_Egonzalez88

./: README.md  main.py  pyproject.toml  test.py
src/graphs_Egonzalez88/: __init__.py
src/graphs_Egonzalez88.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
